--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+
+.active{
+    background:rgb(92, 92, 242);
+    color:white;
+    border-radius: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.back{
+    background-image: url("https://i.pinimg.com/1200x/32/7d/3b/327d3b1d497e1faf15c0a40c4f8e9ee7.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%100%;
+    font-family: Century Gothic;
+    margin-bottom: 0%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.a{
+    text-align: center;
+    color:greenyellow
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.isntactive{
+    background:greenyellow;
+    color:white;
+    border-radius: 2rem;
+    display:inline-block
 }
